# meetup_guru

./: ..gitignore.swp  .gitignore  package-lock.json  package.json  pyproject.toml
dbschema/: default.esdl
extras/: eventbrite_categories.json
meetup/mailing_service/: Cargo.toml  pyproject.toml
meetup/mailing_service/src/: main.rs
meetup/scheduler/: Cargo.toml
meetup/scrapper/: main.py  pyproject.toml
meetup/scrapper/scrappers/: __init__.py  base.py  eventBrite_scrapper.py
meetup/server/: go.mod  main.go  package.json
meetup/server/duncan/: duncan.go  httpErrors.go  routers.go
meetup/server/goenv/: envParser.go  errors.go  goenv.go
meetup/utils/: global_errors.py  global_settings.py  helper_classes.py  helper_functions.py  pyproject.toml  redis.py  session_manager.py
public/serverTemplates/: BaseTemplate.html  home.html
scripts/: generate_enventbrite_categories.py
server/: duncan_config.yml  go.mod  go.sum  main.go  migrations.go  server.go
server/controllers/: base.go  baseController.go  migrations.go  userController.go  userModels.go
server/duncan/: config.go  duncan.go  httpErrors.go  redisCache.go  redisCache_test.go  render.go  router.go
server/models/: base.go  baseModel.go  userModel.go  userModels.go
server/server/: connections.go  dbConnection.go  devtern.conf  migrations.go  prod.conf  server.go
server/server/models/: base.go  userModels.go
server/server/routers/: authRouter.go
server/views/: userView.go
src/scrapper/: pyproject.toml
src/scrapper/src/scrapper/: base.py  eventBrite_scrapper.py
src/utils/: base.py  global_errors.py  global_settings.py  helper_classes.py  helper_functions.py  pyproject.toml  session_manager.py
