[tool.poetry]
name = "mailing_service"
version = "0.1.0"
description = "mailing service for meetups guru"
authors = ["emperorsixpacks <andrewdvd10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
pydantic = {extras = ["settings"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
mailbit = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
