[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = "Event scrapper for meetup_guru"
authors = ["emperorsixpacks <andrewdvd10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
edgedb = "^2.0.1"
pydantic-settings = "^2.5.2"
bs4 = "^0.0.2"
black = "^24.8.0"
certifi = "^2024.8.30"
httpx = "^0.27.2"
requests = "^2.32.3"
redis = "^5.0.8"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
