[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = "Event scrapper for meetup_guru"
authors = ["emperorsixpacks <andrewdvd10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-playwright = "^0.5.2"
edgedb = "^2.0.1"
htmx = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
